# ChangeLog for app-office/lyx
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.303 2014/02/16 00:20:10 dlan Exp $

*lyx-2.0.7.1 (16 Feb 2014)

  16 Feb 2014; Yixun Lan <dlan@gentoo.org> +lyx-2.0.7.1.ebuild:
  version bump, thanks nihil39, bug #501422

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org> lyx-2.0.6.ebuild:
  Symlink texmf files into texmf-site, texmf will not be seen by texlive 2013

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for sparc, wrt bug #473432

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for ia64, wrt bug #473432

  26 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for alpha, wrt bug #473432

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for amd64, wrt bug #473432

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for x86, wrt bug #473432

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for ppc64, wrt bug #473432

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.6.ebuild:
  Stable for ppc, wrt bug #473432

  21 Jun 2013; Pacho Ramos <pacho@gentoo.org> lyx-2.0.6.ebuild:
  Install bigger icons (#472978)

  19 Jun 2013; Jeroen Roovers <jer@gentoo.org> lyx-2.0.6.ebuild:
  Stable for HPPA (bug #473432).

  07 May 2013; Alexis Ballier <aballier@gentoo.org> -lyx-2.0.1.ebuild,
  -lyx-2.0.4.ebuild, -lyx-2.0.5.ebuild:
  remove old

*lyx-2.0.6 (07 May 2013)

  07 May 2013; Alexis Ballier <aballier@gentoo.org> +lyx-2.0.6.ebuild:
  version bump, thanks Pavel

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  11 Mar 2013; Agostino Sarubbo <ago@gentoo.org> lyx-2.0.5.1.ebuild:
  Stable for sparc, wrt bug #447968

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> lyx-1.6.10.ebuild,