@@ -12,23 +12,23 @@ EBUILD lyx-1.6.10.ebuild 4120 SHA256 445c2becd493409edac0a36d3d9d55a6e82cb2cd3a6
 EBUILD lyx-2.0.5.1-r1.ebuild 4386 SHA256 c3867c623b87d4172f569c98bfd911700d135a86ae0d7e9ada1142181289c06a SHA512 2c5db5cf0b1216c5d01a184e37e3e01873fe3d1cf2477369ebefcb9fd68a45ccd8f977750798617144a15907fed0fa807da16158cc92a99f92bda45d19c08b22 WHIRLPOOL 197566484a4200fd518f20ad540d0106c6801a3a80595469d3cb633717d31919313a2608973fd5e3044d3376ea95ef3369d3a4e4a926746f35a10e0ca026a8c9
 EBUILD lyx-2.0.5.1.ebuild 4471 SHA256 3d53dc29abe6fb7e96e84a465575ac72203e9b3dc996c6aafb8678ad44f1a134 SHA512 847c6b74eb10cb3fa03aeed33ec9abad7cf60b93edc00a01088240167da6294453b90dd1a8cb8fe83bd3e6a3a2fd809ab8d50f6371f7f9a4e4ce7e5c1eccd1d3 WHIRLPOOL e6adc73392acaa87a18e478dcefe9eb7d003fbdfac20a5256ea30288f9c0baf6aec78739b9f5d137afe0a07d7eef47e88fecad40721441ad7983689974def2c9
 EBUILD lyx-2.0.6.ebuild 4453 SHA256 bfff68cf081d1e2a7b47f6074cd30fe8fbd5b3c9d15b87c139e74f1cf50a8c60 SHA512 75d5c6886265dd6463186ca2a1a407c0e5994ea38cb6b7734c34d686f6cf41c26b109e308eaa0d4a16c3256546a259c8ee38fecd332bf377dff33a5d12cc2892 WHIRLPOOL c75712601b5d15c8a5e7be86247790de9a22d01eab68ecde8ff0c4e2ba7d2fc7b91fa69895b40d954676afd76a37bcfe8b4fac3e3455c7f38801c3a967a8fb7f
-EBUILD lyx-2.0.7.1.ebuild 4458 SHA256 d0eb9f0e9d0aa8f8fe02020d7bde4cf94fd89ff1772d945b29b8d934aa7d2a77 SHA512 853980ecbabc1a8d4fe19f3be72553fb7868395d58b143446b0f135c3054293877fc286568126d7643488ef5ea182bb9e3f893de931bd808eb7626398d95106e WHIRLPOOL e8ce7de273d0b9a3daa37d68e34d0f6ef918c5a40387c19a882a66fe2f797b629d70d5dd73525701983fe5cada0ca9fc4171d40ad365561bb57e7dce521215c4
-MISC ChangeLog 40535 SHA256 b7b04ce2b8cd68684d3473813dded2968cf5d27eac9c9b9f0d2d602d659ae5cd SHA512 2e091fc65a197276b436c2fe9c4e585d16714dc5d1198eb3f7292fa1bef16eee2dc4d73c587ded6b75b36f93829c81db89ae9aa5dcd48795236cee0c0e9b8ad9 WHIRLPOOL 4ff909debc536c1ab3a9a5c85801b4ca4913f8f593deea764251af03ccce28566890a9ab3415214765d5292a56807b014ab75b66ca89cfafc4a4cf9d883a09ef
+EBUILD lyx-2.0.7.1-r1.ebuild 4601 SHA256 ae1de034d09b0715c8afc66188f6a69aae639dac8947f35943a0e425ba187f91 SHA512 fb525b57fa6f406c8da25ff13e0f72b14873231e19c1c1a1ec10748dda6725f805b5436bff008989638039bf7bb52e500479727fa6f257a817e9f54bad09740c WHIRLPOOL 7fb1fd2431dd4def6c53a3fa645d2689475edef682ab58e2df51c8ba9b72c05c88788d7bf944339e4dcf3e206122886a520bc5fd9294fca53a43becc295fa86b
+MISC ChangeLog 40785 SHA256 537d358662b51bcf744f75897f4724c776e96ac0613d947f761bb691083ff09a SHA512 2282bd2bf86cb7887955439e0eac692268776d9744e9262f246ee4fc80c4908486aea4cd936916781f54fbeede81347844e9c4f1030dc176c308c1baec75e03b WHIRLPOOL 81651d9d72f0cdd499dd04a348b47d050a3c8dc3ad6ea0ff57b4d83fe11b51a9e3d589fcdb7ad5b4cfbe13fe25bc99130212fd4a015ca37ee655da47051f04f2
 MISC metadata.xml 1603 SHA256 7dbbadab2a3c848fa945131763e9827be59df650a0e959e0da5334277d57affe SHA512 770f392893880e0ff8fd296d4ab4956832251e50302412fc07757cf4fa9b344e36670bc6ee8feba8ea367c8821c317e3cf68143335d92e7d0a6f90c55ae66bbd WHIRLPOOL 38df97b32e3b99aaf02fc043402428931f6d54a03f264b158b0fdf16d3cc5993384f72b4d2df6078b2ecd81e75da6cbb1616116114e8063098e601c9f19bfbc3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTAARRAAoJEJIMDbyqvv1VAq0P/A62Psb32vwjJRdiH1vwvNYO
-euJfdqLDe9WuipQx6EAkthPfMqirY8uM3cgHkUy1GNeWnkoe2yYBWOfHFpmNQamu
-XnJnapkE+W6HUbrI09IBVerx5D0+v645drV8o0A9VWhActpZrsrIHAq5u4BdDpDn
-/7thiTZ7ZYebHoy13lnhjQSOlctFCotmQjlHw1ITQ0QTbJ6NXDyiGRoiDXOGH9oi
-W3Jr/d0aaJBFWsXpDqt9WZDSlPZHL3+2FNv+abIStnr7JYCW+OiumiKnciQ3PznU
-WH6ucsqemFQZ4M5DX3YcTnG0yNdoCOFur5EYmg5SX3QpKR4/HPB8NIDyx4DR62Bf
-GOZxTQuDOBSrURKHqrfxtW+p/uLm9KoqtqD3AIhkOc7ZEW3DuyUK8o7Lm8bbuKvH
-tKEbYmeurhAHiWSf6RJMD7fEGf4vU6x+uUUvZVofx1y/qLdQmxg/tgUJEU+7j/tP
-l0QV8JmPxn+vVqHmHenYjaSftXHaOKCue4gagQ3e18RkDhIpsMft1ecp2WQGzkV0
-rhDTu4mN18QL0CjjCyqIRnLaEHYOoazYk+6e/0RAtgiJw39oY6tqPOWa7WSg13ob
-AJ0RhpqKH8I7XPRBOKxf6MV5crrHnz5aepr3v7odZ88TH9bybWI8D7iI8efb3wGO
-+xx2ooIYS92lJI27BpT/
-=XAYx
+iQIcBAEBCAAGBQJTAT+GAAoJEJIMDbyqvv1VhxcQAM6n5H7waqCJkoAM1F/vOzaU
+U9b0mof5RzBIMP2Fw/3oiDlzp2ecT8WCq7ZW9G44woJYUcvvTF6NUrT7WGpUrBsj
+YsKuslhWn8Me5Dl4HjAd+hA4oEapjAY+cybj6Y25BHGAEqAd99soFYXdkkYOk2X6
+fyV4sQRzBhwgLMKjWCMImd8QVz/eAYNovI6TTwdssTTJrvkBbU/gusxtnDckL4oB
+6ehxEWWdN5i/pZ/pxRYFcaQGTYJcj2R9iP+HMh/CaHCQ+ysuLH14ZEeVBOHNUV+n
+yxoSZlxRIBAe/CNtuCwBweFXF1OpFT6Kg3Nzp35pMuAPvO3SVkH9bf2SBVIo7l7z
+IXvHXZEXLQJiTY9m9sMpQISKnqSm6nIANJ1BGVGib/k9ALf3a9lEvdc6sQ/BL0fr
+WCo6Y2YK7WEQseG2yr2J2qkvs67bNoGiVZ53hWS0yDdTuZpG+9jxZOFZKvVV5xe4
+cIdxvXulmfnHQB7Ka/8a+srEJI68PSveqypMHee+gjckojmw9sX4tYcvS0L90FdZ
+298WksQcwOflR4p//uRXqp8tMiV1ks4GmfaPFU1h1T01WdM/CRrcBRETGrtqlIuL
+nbN5PrcEhT/XjQjlUt8pUtLt5MXJ/dmiXJ7Bx86rS7C1jXOMw5IiH/UYpg4XdZT1
+lawzWlZU9w2yY+c2S11j
+=+gXL
 -----END PGP SIGNATURE-----
