@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install postinst postrm preinst prepare setup
+DEPEND=dev-qt/qtgui:4 dev-qt/qtcore:4 >=dev-libs/boost-1.34 python_single_target_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] virtual/pkgconfig nls? ( sys-devel/gettext ) >=sys-apps/sed-4 X? ( x11-apps/mkfontdir media-fonts/encodings )
+DESCRIPTION=WYSIWYM frontend for LaTeX, DocBook, etc.
+EAPI=5
+HOMEPAGE=http://www.lyx.org/
+IUSE=cups debug nls +latex monolithic-build html rtf dot docbook dia subversion rcs svg gnumeric +hunspell aspell enchant linguas_ar linguas_ca linguas_cs linguas_de linguas_da linguas_el linguas_en linguas_es linguas_eu linguas_fi linguas_fr linguas_gl linguas_he linguas_hu linguas_ia linguas_id linguas_it linguas_ja linguas_nb linguas_nn linguas_pl linguas_pt linguas_ro linguas_ru linguas_sk linguas_sr linguas_sv linguas_tr linguas_uk linguas_zh_CN linguas_zh_TW X python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x64-macos ~x86-macos
+LICENSE=GPL-2
+RDEPEND=dev-qt/qtgui:4 dev-qt/qtcore:4 >=dev-libs/boost-1.34 python_single_target_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] dev-texlive/texlive-fontsextra || ( media-gfx/imagemagick[png] media-gfx/graphicsmagick[png] ) cups? ( net-print/cups ) latex? ( app-text/texlive app-text/ghostscript-gpl app-text/noweb app-text/dvipng dev-tex/dvipost dev-tex/chktex app-text/ps2eps dev-texlive/texlive-latexextra dev-texlive/texlive-pictures dev-texlive/texlive-science dev-texlive/texlive-genericextra dev-texlive/texlive-fontsrecommended || ( dev-tex/latex2html dev-tex/tth dev-tex/hevea dev-tex/tex4ht ) ) html? ( dev-tex/html2latex ) rtf? ( dev-tex/latex2rtf app-text/unrtf dev-tex/html2latex ) linguas_he? ( dev-tex/culmus-latex ) docbook? ( app-text/sgmltools-lite ) dot? ( media-gfx/graphviz ) dia? ( app-office/dia ) subversion? ( <dev-vcs/subversion-1.7.0 ) rcs? ( dev-vcs/rcs ) svg? ( || ( media-gfx/imagemagick[svg] media-gfx/graphicsmagick[svg] ) || ( gnome-base/librsvg media-gfx/inkscape ) ) gnumeric? ( app-office/gnumeric ) hunspell? ( app-text/hunspell ) aspell? ( app-text/aspell ) enchant? ( app-text/enchant )
+REQUIRED_USE=python_single_target_python2_6? ( python_targets_python2_6 ) python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_6 python_single_target_python2_7 )
+SLOT=0
+SRC_URI=ftp://ftp.lyx.org/pub/lyx/stable/2.0.x/lyx-2.0.7.1.tar.xz
+_eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	font	37271e0911f39dd15a28adcaf94f6956	gnome2-utils	d7c71c6a7d871f567b416a363d65c3dc	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	82a55861314bbcedaf1e08ed4dd651b3	python-utils-r1	ceb3e4c3ba203e28bb02eeb182d88acf	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=0fbe8796788e2e2dd754778503d671eb
