@@ -1,6 +1,13 @@
 # ChangeLog for app-office/lyx
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.303 2014/02/16 00:20:10 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/lyx/ChangeLog,v 1.304 2014/02/16 22:45:11 dlan Exp $
+
+*lyx-2.0.7.1-r1 (16 Feb 2014)
+
+  16 Feb 2014; Yixun Lan <dlan@gentoo.org> -lyx-2.0.7.1.ebuild,
+  +lyx-2.0.7.1-r1.ebuild:
+  bump to 2.0.7.1-r1, 1) EAPI=5, 2) drop qt4-r2, 3) convert to python*-r1 4)
+  update mime database. thanks floppym, kensington
 
 *lyx-2.0.7.1 (16 Feb 2014)
 
